fix white bar in dark mode

--- a/src/global.scss
+++ b/src/global.scss
@@ -51,7 +51,3 @@ ion-card {
 .form-card {
 	min-width: 95%;
 }
-
-ion-content {
-  --offset-top: -15px !important;
-}
